--- a/FileSearch/src/main/resources/com/ifmg/filesearch/FileSearch.fxml
+++ b/FileSearch/src/main/resources/com/ifmg/filesearch/FileSearch.fxml
@@ -7,38 +7,61 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ifmg.filesearch.FileSearchController" spacing="10.0" alignment="TOP_LEFT">
     <padding>
         <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
     </padding>
 
+    <Label text="Pasta Base da Busca:" style="-fx-font-weight: bold;"/>
+    <HBox spacing="10.0" alignment="CENTER_LEFT">
+        <TextField fx:id="textFieldPastaBase" promptText="Caminho da pasta..." HBox.hgrow="ALWAYS"/>
+        <Button text="Escolher..." onAction="#selecionarPastaBase"/>
+    </HBox>
+
     <Label text="Descrição do arquivo:" style="-fx-font-weight: bold;"/>
     <TextArea fx:id="textAreaDescricao" prefHeight="80.0" VBox.vgrow="NEVER"/>
 
     <Label text="Tipos de Arquivo" style="-fx-font-weight: bold;"/>
-    <HBox spacing="10.0">
-        <CheckBox fx:id="checkPdf" text=".pdf"/>
-        <CheckBox fx:id="checkDocx" text=".docx"/>
-        <CheckBox fx:id="checkTxt" text=".txt"/>
-        <CheckBox fx:id="checkPng" text=".png"/>
-    </HBox>
+    
+    <GridPane hgap="20.0" vgap="10.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        
+        <CheckBox fx:id="checkPdf" text="PDF (.pdf)" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+        <CheckBox fx:id="checkDocx" text="Word (.docx)" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+        <CheckBox fx:id="checkTxt" text="Texto (.txt)" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+        
+        <CheckBox fx:id="checkXlsx" text="Planilha (.xlsx)" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+        <CheckBox fx:id="checkPptx" text="Slide (.pptx)" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <CheckBox fx:id="checkPng" text="Imagem (.png, .jpg)" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+    </GridPane>
 
     <Label text="Palavras-chave:" style="-fx-font-weight: bold;"/>
     <HBox spacing="10.0">
         <children>
-            <TextField fx:id="textFieldKeyword" promptText="Digite uma palavra-chave">
+            <TextField fx:id="textFieldKeyword" promptText="Digite uma palavra-chave" onAction="#adicionarPalavraChave">
                 <HBox.hgrow>ALWAYS</HBox.hgrow>
             </TextField>
-            <Button fx:id="buttonAddKeyword" text="+" style="-fx-font-weight: bold;">
+            <Button fx:id="buttonAddKeyword" text="+" style="-fx-font-weight: bold;" onAction="#adicionarPalavraChave">
                 <tooltip>
                     <Tooltip text="Adicionar palavra-chave"/>
                 </tooltip>
             </Button>
-            <Button fx:id="buttonRemoveKeyword" text="-" style="-fx-font-weight: bold;">
+            <Button fx:id="buttonRemoveKeyword" text="-" style="-fx-font-weight: bold;" onAction="#removerPalavraChave">
                 <tooltip>
                     <Tooltip text="Remover palavra-chave selecionada"/>
                 </tooltip>
